samples/_failures_safe/1761625146_f2c716_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38a92396.c: In function ‘main’:
./samples/SAFE/__tmp_38a92396.c:142:5: error: expected expression at end of input
  142 |     for (int i = 0; i < 256; i++)
      |     ^~~
./samples/SAFE/__tmp_38a92396.c:142:5: error: expected declaration or statement at end of input
